; ModuleID = '/home/carl/AnghaBench/redis/src/extr_module.c_moduleCreateCallReplyFromProto.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_module.c_moduleCreateCallReplyFromProto.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32*, i32, i32, i32, i32* }

@REDISMODULE_REPLYFLAG_TOPARSE = common dso_local global i32 0, align 4
@REDISMODULE_REPLY_STRING = common dso_local global i32 0, align 4
@REDISMODULE_REPLY_ERROR = common dso_local global i32 0, align 4
@REDISMODULE_REPLY_INTEGER = common dso_local global i32 0, align 4
@REDISMODULE_REPLY_ARRAY = common dso_local global i32 0, align 4
@REDISMODULE_REPLY_UNKNOWN = common dso_local global i32 0, align 4
@REDISMODULE_REPLY_NULL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_4__* @moduleCreateCallReplyFromProto(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = call %struct.TYPE_4__* @zmalloc(i32 32)
  store %struct.TYPE_4__* %6, %struct.TYPE_4__** %5, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 4
  store i32* %7, i32** %9, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  store i32* %10, i32** %12, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @sdslen(i32* %13)
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 3
  store i32 %14, i32* %16, align 8
  %17 = load i32, i32* @REDISMODULE_REPLYFLAG_TOPARSE, align 4
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 2
  store i32 %17, i32* %19, align 4
  %20 = load i32*, i32** %4, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 0
  %22 = load i32, i32* %21, align 4
  switch i32 %22, label %39 [
    i32 36, label %23
    i32 43, label %23
    i32 45, label %27
    i32 58, label %31
    i32 42, label %35
  ]

23:                                               ; preds = %2, %2
  %24 = load i32, i32* @REDISMODULE_REPLY_STRING, align 4
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 1
  store i32 %24, i32* %26, align 8
  br label %43

27:                                               ; preds = %2
  %28 = load i32, i32* @REDISMODULE_REPLY_ERROR, align 4
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 1
  store i32 %28, i32* %30, align 8
  br label %43

31:                                               ; preds = %2
  %32 = load i32, i32* @REDISMODULE_REPLY_INTEGER, align 4
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 1
  store i32 %32, i32* %34, align 8
  br label %43

35:                                               ; preds = %2
  %36 = load i32, i32* @REDISMODULE_REPLY_ARRAY, align 4
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %38 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %37, i32 0, i32 1
  store i32 %36, i32* %38, align 8
  br label %43

39:                                               ; preds = %2
  %40 = load i32, i32* @REDISMODULE_REPLY_UNKNOWN, align 4
  %41 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %41, i32 0, i32 1
  store i32 %40, i32* %42, align 8
  br label %43

43:                                               ; preds = %39, %35, %31, %27, %23
  %44 = load i32*, i32** %4, align 8
  %45 = getelementptr inbounds i32, i32* %44, i64 0
  %46 = load i32, i32* %45, align 4
  %47 = icmp eq i32 %46, 42
  br i1 %47, label %53, label %48

48:                                               ; preds = %43
  %49 = load i32*, i32** %4, align 8
  %50 = getelementptr inbounds i32, i32* %49, i64 0
  %51 = load i32, i32* %50, align 4
  %52 = icmp eq i32 %51, 36
  br i1 %52, label %53, label %62

53:                                               ; preds = %48, %43
  %54 = load i32*, i32** %4, align 8
  %55 = getelementptr inbounds i32, i32* %54, i64 1
  %56 = load i32, i32* %55, align 4
  %57 = icmp eq i32 %56, 45
  br i1 %57, label %58, label %62

58:                                               ; preds = %53
  %59 = load i32, i32* @REDISMODULE_REPLY_NULL, align 4
  %60 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %61 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %60, i32 0, i32 1
  store i32 %59, i32* %61, align 8
  br label %62

62:                                               ; preds = %58, %53, %48
  %63 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  ret %struct.TYPE_4__* %63
}

declare dso_local %struct.TYPE_4__* @zmalloc(i32) #1

declare dso_local i32 @sdslen(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
